Added service save and temp housing.

--- a/Odin/Content/css/transferee/intake.css
+++ b/Odin/Content/css/transferee/intake.css
@@ -33,7 +33,7 @@
         display: block;
         font-size: medium;
         margin-bottom: -5px; }
-      div#intake .intake-block .intake-row .intake-col span {
+      div#intake .intake-block .intake-row .intake-col .intake-span {
         color: #31a4dd;
         font-size: small; }
       div#intake .intake-block .intake-row .intake-col .intake-add {
@@ -44,7 +44,7 @@
         font-size: medium;
         color: #e53c2e;
         cursor: pointer; }
-      div#intake .intake-block .intake-row .intake-col input {
+      div#intake .intake-block .intake-row .intake-col .intake-input {
         color: #31a4dd;
         font-size: small;
         display: none;
@@ -53,10 +53,12 @@
       div#intake .intake-block .intake-row .intake-col .intake-service-input {
         display: block;
         line-height: 20px; }
-      div#intake .intake-block .intake-row .intake-col textarea {
-        display: none;
-        width: 100%;
-        max-width: 100%;
-        color: #31a4dd;
-        font-size: small; }
+      div#intake .intake-block .intake-row .intake-col .intake-date {
+        display: none; }
+        div#intake .intake-block .intake-row .intake-col .intake-date input {
+          color: #31a4dd;
+          font-size: small;
+          display: none; }
+        div#intake .intake-block .intake-row .intake-col .intake-date span {
+          color: #31a4dd; }
 
