--- a/Odin/Content/css/transferee/transferee.scss
+++ b/Odin/Content/css/transferee/transferee.scss
@@ -1,10 +1,9 @@
 ﻿@import "../shared/_definitions.scss";
 
-
 @include header;
 
 body {
-    padding: 0px
+    padding: 0px;
 }
 
 @media screen and (max-width: 842px) {
@@ -13,13 +12,12 @@ body {
 
 div.row {
     text-align: center;
-
     @media screen and (max-width: 842px) {
         margin-top: 20px;
     }
 
     div.col-md-2 {
-        height: 850px;
+        height:850px;
         padding-top: 30px;
         color: white;
         background-color: $DW_Lime;
@@ -152,8 +150,9 @@ div.row {
     div.col {
         border-top: 1px solid;
         font-family:sans-serif;
+        overflow-y:scroll;
         div.noinit {
             display: none;
-        }
+        }        
     }
 }
