--- a/Odin/Views/Orders/Transferee.cshtml
+++ b/Odin/Views/Orders/Transferee.cshtml
@@ -3,6 +3,7 @@
     Layout = "~/Views/Shared/_Common.cshtml";
 }
 
+
 <div id="transferee" class="row">
     <div class="col-md-2">
         <img src="~/Content/Images/icn_person.png"/>
@@ -22,13 +23,15 @@
             <li class="item" data-panel="itinerary"><img src="~/Content/Images/icn_internal_itinerary.png"/><span>Itinerary</span></li>
         </ul>
     </div>
-    <div class="col">
-        @Html.Partial("~/Views/Orders/Partials/_Intake.cshtml")
-        @Html.Partial("~/Views/Orders/Partials/_Details.cshtml")
-        @Html.Partial("~/Views/Orders/Partials/_Housing.cshtml")
-        @Html.Partial("~/Views/Orders/Partials/_History.cshtml")
-        @Html.Partial("~/Views/Orders/Partials/_Messages.cshtml")
-        @Html.Partial("~/Views/Orders/Partials/_Itinerary.cshtml")
+    <div class="col-md-10">
+        <div class="row">
+            @Html.Partial("~/Views/Orders/Partials/_Intake.cshtml")
+            @Html.Partial("~/Views/Orders/Partials/_Details.cshtml")
+            @Html.Partial("~/Views/Orders/Partials/_Housing.cshtml")
+            @Html.Partial("~/Views/Orders/Partials/_History.cshtml")
+            @Html.Partial("~/Views/Orders/Partials/_Messages.cshtml")
+            @Html.Partial("~/Views/Orders/Partials/_Itinerary.cshtml")
+        </div>
     </div>
 </div>
 
